--- a/src/app/landing-footer/landing-footer.component.scss
+++ b/src/app/landing-footer/landing-footer.component.scss
@@ -10,25 +10,14 @@ $break-sm: 576px;
 }
 
 .partners {
-    background-color: #6071BE;
+    background-image: url("/assets/images/pattern1.png");
     position: relative;
     padding-top: 100px;
     &.padding-top-and-bottom {
         padding: 100px 0 45px 0 !important;
     }
-    .partners-pattern {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        left: 0;
-        top: 0;
-        background-image: url('../../assets/images/pattern4.png');
-        background-size: 350px;
-        background-position: bottom center;
-        opacity: .125
-    }
     h1 {
-        color: #fff;
+        color: #555;
         margin: 0 auto 20px auto;
     }
     .partner-icon-hanshake {
@@ -51,15 +40,15 @@ $break-sm: 576px;
         justify-content: center;
         align-content: center;
         flex-wrap: nowrap;
+        position:relative;
         .buttons-carousel {
             display: flex;
             align-items: center;
             justify-content: center;
             font-size: 35px;
             color: $default;
-            font-size: 35px;
-            color: #fff;
             cursor: pointer;
+            z-index:4;
             transition: .3s;
             &:hover {
                 transform: scale(1.05);
@@ -84,6 +73,9 @@ $break-sm: 576px;
                     height: 100px;
                     margin: 10px .325%;
                     box-sizing: box-shadow;
+                    background-position: center center;
+                    background-repeat: no-repeat;
+                    z-index: 10;
                     float: left;
                     position: Relative;
                     display: flex;
@@ -91,17 +83,22 @@ $break-sm: 576px;
                     justify-content: center;
                     cursor: pointer;
                     transition: 1s;
-                    &:hover > span {
-                        display:block;
+                    background-size: contain;
+                    transition: .3s;
+                    &:hover  {
+                        transform: scale(1.25);
+                        > span {
+                            display:block;
+                        }
                     }
                     span {
                         width: 100%;
                         position: absolute;
                         height: 25px;
-                        bottom: -55px;
+                        bottom: -20px;
                         left: 0;
                         text-align: center;
-                        color:#fff;
+                        color:$default;
                         display:none;
                         font-weight: bold;
                     }
@@ -112,6 +109,7 @@ $break-sm: 576px;
                         transition: .3s;
                         opacity: .85;
                         transform: scale(1.15);
+                        cursor: default;
                         &:hover {
                             transform: scale(1.55);
                             opacity: 1;
@@ -204,6 +202,19 @@ footer {
     a:hover {
         font-weight: bold;
     }
+}
+
+.swipe-animation {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    margin: auto;
+    z-index: 3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 @media only screen and (max-width: $break-md) {
