--- a/src/app/landing-footer/landing-footer.component.html
+++ b/src/app/landing-footer/landing-footer.component.html
@@ -7,13 +7,13 @@
         <h1 class="centered italic">Os nossos parceiros premium</h1>
         <div id="footer-carousel">
           <div class='swipe-animation' (mouseenter)="stopAnimation()" (mouseleave)="sliderAnimation()" (swiperight)="swipe('right')"
-            (swipeleft)="swipe('left')"></div>
+            (swipeleft)="swipe('left')" [style.touch-action]="'pan-y'"></div>
           <div class="buttons-carousel">
             <i (click)="moveLeft()" class="fas fa-chevron-left"></i>
           </div>
           <div class='footer-carousel-partners'>
             <div class="footer-carousel-wrapper">
-              <div class="footer-each-item" *ngFor="let partner of partners" (click)="openUrl(partner.site)" (swiperight)="swipe('right')"
+              <div class="footer-each-item" [style.touch-action]="'pan-y'" *ngFor="let partner of partners" (click)="openUrl(partner.site)" (swiperight)="swipe('right')"
               (swipeleft)="swipe('left')" [ngStyle]="{'background-image':'url(' + partner.img + ')'}">
                 <span class='animated fadeIn faster'> {{partner.title}} </span>
               </div>
