fix(form-ge, form-gv-, form-gt): fixed select no appearing sometimes
AIESEC-129 - https://devmagic.atlassian.net/secure/RapidBoard.jspa?rapidView=71&modal=detail&selectedIssue=AIESEC-129

--- a/src/app/form-gv/form-gv.component.scss
+++ b/src/app/form-gv/form-gv.component.scss
@@ -1684,7 +1684,11 @@ label {
 }
 
 /deep/ .cdk-overlay-pane, .cdk-overlay-pane {
-    position: relative;
+    position: fixed;
+    max-height: 500px;
+    overflow:auto; 
+    padding: 0 !important;
+    z-index:1000;
 }
 
 /deep/ .mat-autocomplete::-webkit-input-placeholder {
