feat(thank you): 'obrigado' page layout, birthdate fixed

--- a/src/app/form-ge/form-ge-thank-you/form-ge-thank-you.component.html
+++ b/src/app/form-ge/form-ge-thank-you/form-ge-thank-you.component.html
@@ -18,7 +18,7 @@
 												<div class="col-md-12" id="header-resultado">
 													<h2>Obrigado por se increver!</h2>
 												</div>
-												<div class="col-md-12 grid-message mobile-message">
+												<div class="col-md-12 grid-message mobile-message" id="grid-message">
 													<div class="col-md-10">
 														<h3>Fique ligado no seu e-mail que enviaremos informações úteis para você por lá.</h3>
 														<p>
