--- a/src/app/form-gv/form-gv-thank-you/form-gv-thank-you.component.html
+++ b/src/app/form-gv/form-gv-thank-you/form-gv-thank-you.component.html
@@ -18,16 +18,16 @@
                       <div class="col-md-12" id="header-resultado">
                         <h2>Obrigado por se increver!</h2>
                       </div>
-                      <div class="col-md-12 grid-message mobile-message">
+                      <div class="col-md-12 grid-message mobile-message" id="grid-message">
                         <div class="col-md-10">
-                            <h3>Fique ligado no seu e-mail que enviaremos informações úteis para você por lá.</h3>
-                            <p>
-                                Agora que você criou a sua conta, você poderá acessar a nossa plataforma e começar a buscar por projetos de intercâmbio voluntário
-                                na data e destino ideal para você! Fique atento ao seu e-mail onde enviaremos mais informações.
-                              </p>
+                          <h3>Fique ligado no seu e-mail que enviaremos informações úteis para você por lá.</h3>
+                          <p>
+                            Agora que você criou a sua conta, você poderá acessar a nossa plataforma e começar a buscar por projetos de intercâmbio voluntário
+                            na data e destino ideal para você! Fique atento ao seu e-mail onde enviaremos mais informações.
+                          </p>
                         </div>
                         <div class="col-md-2">
-                            <i class="fas fa-thumbs-up fa-10x color-icon"></i>
+                          <i class="fas fa-thumbs-up fa-10x color-icon"></i>
                         </div>
                       </div>
                     </div>
