Revert "fix(form-ge, form-gv-, form-gt): fixed select no appearing sometimes"

--- a/src/app/form-ge/form-ge.component.scss
+++ b/src/app/form-ge/form-ge.component.scss
@@ -1488,13 +1488,8 @@ label {
 }
 
 /deep/ .cdk-overlay-pane, .cdk-overlay-pane {
-    position: fixed;
-    max-height: 500px; 
-    overflow:auto; 
-    padding: 0 !important;
-    z-index:1000;
+    position: relative;
 }
-
 
 /deep/ .mat-autocomplete::-webkit-input-placeholder {
     color: red;
