--- a/src/app/form-gt/form-gt.component.scss
+++ b/src/app/form-gt/form-gt.component.scss
@@ -1502,12 +1502,8 @@ label {
     background-color: red;
 }
 
-
 /deep/ .cdk-overlay-pane, .cdk-overlay-pane {
-    position: fixed;
-    overflow:auto; 
-    padding: 0 !important;
-    z-index:1000;
+    position: relative;
 }
 
 /deep/ .mat-autocomplete::-webkit-input-placeholder {
