--- a/src/app/form-gv/form-gv.component.scss
+++ b/src/app/form-gv/form-gv.component.scss
@@ -1684,11 +1684,7 @@ label {
 }
 
 /deep/ .cdk-overlay-pane, .cdk-overlay-pane {
-    position: fixed;
-    max-height: 500px;
-    overflow:auto; 
-    padding: 0 !important;
-    z-index:1000;
+    position: relative;
 }
 
 /deep/ .mat-autocomplete::-webkit-input-placeholder {
