--- a/src/app/form-ge/form-ge.component.scss
+++ b/src/app/form-ge/form-ge.component.scss
@@ -1,5 +1,7 @@
 @import '~bootstrap/dist/css/bootstrap.min.css';
 @import '~animate.css/animate.min.css';
+@import '~node_modules/primeng/resources/themes/nova-light/theme.css';
+@import '~node_modules/primeng/resources/primeng.min.css';
 .forms-term {
     textarea {
         margin-bottom: 5px;
@@ -17,7 +19,7 @@
     width: 100% !important;
     height: 100% !important;
     display:flex;
-    align-items: center;
+    flex-start: center;
     justify-content : center;
     overflow-y: auto;
 }
@@ -190,7 +192,8 @@ body {
     box-sizing: border-box;
     border-radius: 3px;
     overflow: hidden;
-    position: relative;
+    position: absolute;
+    z-index: 9999;
 }
 
 .styled-select,
@@ -225,10 +228,11 @@ select:focus {
 
 .select-dropdown {
     justify-content: flex-start;
-    flex-wrap: wrap;
+    flex-wrap: wrap !important;
     background-color: #1CA390;
     border-bottom: 2px solid rgba(255, 255, 255, .5);
     padding-right: 10px;
+    position: relative;
 }
 
 .select-dropdown div.input-group-prepend>div {
@@ -483,10 +487,6 @@ section.header h1 {
 /*--------------------------------------------------------------
       Forms
   --------------------------------------------------------------*/
-
-.select-dropdown {
-    flex-wrap: wrap !important;
-}
 
 .dropdown {
     padding: 0 10px;
@@ -1458,39 +1458,53 @@ label {
     margin: auto
 }
 
-.example-form {
-  min-width: 150px;
-  max-width: 500px;
+/deep/ .ui-autocomplete-input {
   width: 100%;
+  height: 50px;
+  background-color: transparent;
+  border: none;
+  color: white;
 }
 
-.example-full-width {
-  width: 100%;
+/deep/ p-autoComplete {
+    input::-webkit-input-placeholder {
+        color: white;
+    }
+    input:-moz-placeholder {
+        color: white;
+    }
+    input::-moz-placeholder {
+        color: white;
+    }
+    input:-ms-input-placeholder {
+        color: white;
+    }
 }
 
-.autocomplete {
-    height: 50px;
-    padding-top: 20px;
+/deep/ .ui-autocomplete-items{
+  list-style: none;
+  padding: 0;
+  background-color: #fff;
+  color: #333;
+  max-height: 215px;
+  overflow: auto;
+  li {
+    width: 100%;
+    padding:9.5px;
+    transition:.3s;
+    &:hover {
+      background-color: #3f77bc;
+      color:#fff;
+    }
+  }
 }
 
-.autocomplete-placeholder {
-    font-size: 16px !important;
-    color: #fff;
-    font-style: italic;
-}
-
-/deep/ .mat-autocomplete-panel.mat-autocomplete-visible {
-    background-color: white;
-}
-
-/deep/ .mat-autocomplete {
-    background-color: red;
-}
-
-/deep/ .cdk-overlay-pane, .cdk-overlay-pane {
+.autocomplete-negative-index {
+    z-index: 0;
     position: relative;
 }
 
-/deep/ .mat-autocomplete::-webkit-input-placeholder {
-    color: red;
+.autocomplete-negative-index2 {
+    z-index: -1;
+    position: relative;
 }
